Fix Path to URL conversion for windows users